--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,6 @@
     top: 20px;
 }
 
-.menu{
-    display: none;
-}
-
 .main_page{
     background-image: url("../images/background.svg");
 }
@@ -41,6 +37,7 @@ a {
 
 .active{
     font-size: 200%;
+    background-color: darkgray;
 }
 
 main{
@@ -53,9 +50,10 @@ main{
 
 .gallery{
     display: grid;
+    row-gap: 5px;
     justify-content: center;
     align-items: center;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
 }
 
 .movie_info{
@@ -88,49 +86,37 @@ main{
 
 @media screen and (min-width: 750px) {
     .gallery{
-        display: grid;
-        justify-content: left;
+        justify-content: center;
+        gap: 5px;
         grid-template-columns: auto auto auto;
     }
     
 
     .nav_links{
         font-size: 80%;
-        display: flex;
         flex-direction: row;
         justify-content: flex-start;
     }
-    .menu{
-        font-size: 150%;
-        display: inline;
-        border: dotted black 2px;
-        background-color: white;
-    }
+
     .mov1, .mov2{
         background-color: yellow;
+    }
+    .center{
+        width: 80%;
     }
 
     .active{
         font-size: 300%;
         border: solid black 3px;
+        border-radius: 20px;
     }
 }
 
 @media screen and (min-width: 1100px) {
-    .gallery{
-        display: grid;
-        grid-template-columns: auto auto auto;
-    }
-
     .nav_links{
-        display: flex;
-        flex-direction: row;
         justify-content: flex-end;
     }
 
-    .center{
-        width: 80%;
-    }
     .movie_info{
         flex-direction: row;
         align-items: center;
@@ -138,8 +124,8 @@ main{
     .mov1, .mov2{
         background-color: orangered;
     }
-    .menu{
-        font-size: 175%;
+    img{
+        border: solid blue;
     }
     #image1{
         grid-column: 1/2;
